--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,55 @@
-docs/
-reports/
+# Logs
+logs
+*.log
+npm-debug.log*
 
-# Mac OS X
+# Dependency directories
+node_modules/
+
+# Optional npm cache directory
+.npm
+
+# Diagnostic reports (https://nodejs.org/api/report.html)
+report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Coverage directory used by tools like istanbul
+coverage
+*.lcov
+.nyc_output
+
+# TypeScript cache
+*.tsbuildinfo
+
+# Optional eslint cache
+.eslintcache
+
+# Editors
+*.swp
+.idea/
+.vs/
+.vscode/
+.vscode-test
 .DS_Store
+.history
+Thumbs.db
+/.project
 
-# Node.js
-node_modules
-npm-debug.log
+# build / generate output
+dist
+out
+
+# Output of 'npm pack'
+*.tgz
+
+# dotenv environment variables file
+.env
+.npmrc
+
+*.pem
+!test/unit/helpers/public_key.pem
